feat(main): Fixing the problem with protocol generating