@@ -63,31 +63,31 @@ public class WordServiceImpl implements WordService {
         }
 
         try {
-            data = new ArrayList<>();
             document = new NiceXWPFDocument(file);
             List<XWPFTable> tables = document.getTables();
 
             log.info("The number of tables in file {} is {}", document.getProperties().getThumbnailFilename(), document.getTables().size());
             if (tables.size() == 3) {
-                processThreeTables(tables, data);
+                data = processThreeTables(tables);
             } else if (tables.size() == 2){ // check file_name
-                processTwoTables(tables, data);
+                data = processTwoTables(tables);
             }
         } catch (IOException e) {
             log.info("Handle later deserialization");
         }
+        log.info("data: {}", data);
         return data;
     }
-
 
     /**
      *
      * @param tables
-     * @param data
      */
-    private void processTwoTables(List<XWPFTable> tables, List<List<String>> data) {
+    private List<List<String>> processTwoTables(List<XWPFTable> tables) {
         XWPFTable t = tables.getFirst();
         XWPFTableRow headers = t.getRow(0);
+
+        headers.getTableCells().stream().forEach(cell -> {log.info("Header: {}", cell.getText());});
 
 
         Map<String, Map<String, List<Map<String, String>>>> map = new HashMap<>();
@@ -118,15 +118,16 @@ public class WordServiceImpl implements WordService {
                 }
 //                log.info("Map is {}", map);
             } else {
-
                 Map<String, String> keys = new HashMap<>();
                 headers.getTableCells().forEach(cells -> keys.putIfAbsent(cells.getText(), ""));
-                log.info("Keys are {}", keys);
+
                 int k = 0;
-                for (String key : keys.keySet()) {
-                    keys.put(key,row.getTableCells().get(k).getText());
+                for (XWPFTableCell cell : row.getTableCells()) {
+                    String header = headers.getTableCells().get(k).getText();
+                    keys.put(header, cell.getText());
                     k++;
                 }
+                log.info("Keys are {}", keys);
 
                 if (map.containsKey(orientation)) {
                     map.get(orientation).get(program).add(keys);
@@ -134,21 +135,79 @@ public class WordServiceImpl implements WordService {
             }
         }
         log.info("The data map contains: {}", map);
-//        processData(map);
+        return processData(map);
     }
 
-    private void processData(Map<String, Map<String, Map<String, String>>> dataMap){
+    private List<List<String>> processData(Map<String, Map<String, List<Map<String, String>>>> dataMap){
+        List<List<String>> data = new ArrayList<>();
+        /*
+            0	ID - autogen
+            1	FullName + `Ф.И.О. выпускника`
+            2	StudNum + `№ студ. билета`
+            3	Theme + `Тема ВКР`
+            4	SuData + `Ученая степень, должность руководителя ВКР`
+            5	SuName + `Руководитель ВКР`
+            11	Questioner1
+            12	Question1
+            13	Questioner2
+            14	Question2
+            15	Questioner3
+            16	Question3
+            21	Score
+            20	IndividualOpinion
+            24	Language
+            29  Department
+            30 Orientation
+            31 Citizenship + `Гражданство`
+            32 Program
 
-        for (Map.Entry<String, Map<String, Map<String, String>>> orientations : dataMap.entrySet()) {
-            for (Map.Entry<String, Map<String, String>> programs : orientations.getValue().entrySet()) {
-                for (Map.Entry<String, String> entry : programs.getValue().entrySet()) {
+            max = 32 -> 32 + 8
+            need 1,2,3,4,5,31
+         */
+        int size = 1;
+        log.info("Started processing data");
+        for (Map.Entry<String, Map<String, List<Map<String, String>>>> orientations : dataMap.entrySet()) {
+            List<String> dat = new ArrayList<>(Collections.nCopies(40, "?"));
+            insertAtIndex(dat,0, String.valueOf(size));
 
+            insertAtIndex(dat,30 ,orientations.getKey());
+            for (Map.Entry<String, List<Map<String, String>>> programs : orientations.getValue().entrySet()) {
+                insertAtIndex(dat,32, programs.getKey());
+                for (Map<String, String> keys : programs.getValue()) {
+//                    log.info("keys {}, {}, {}, {}, {}, {}"
+//                            , keys.get("Ф.И.О. выпускника")
+//                            , keys.get("№ студ. билета")
+//                            , keys.get("Тема ВКР")
+//                            , keys.get("Ученая степень, должность руководителя ВКР")
+//                            , keys.get("Руководитель ВКР")
+//                            , keys.get("Гражданство"));
+                    if (keys.get("Ф.И.О. выпускника").isEmpty()){ continue; }
+                    insertAtIndex(dat,31, keys.get("Гражданство"));
+                    insertAtIndex(dat,1, keys.get("Ф.И.О. выпускника"));
+                    insertAtIndex(dat,2, keys.get("№ студ. билета"));
+                    insertAtIndex(dat,3, keys.get("Тема ВКР"));
+                    insertAtIndex(dat,4, keys.get("Ученая степень, должность руководителя ВКР"));
+                    insertAtIndex(dat,5, keys.get("Руководитель ВКР"));
+                    size++;
+                    data.add(dat);
                 }
+
+
             }
         }
+        log.info("Endede processing data");
+        return data;
     }
 
-    private void processThreeTables(List<XWPFTable> tables, List<List<String>> data) {
+    private void insertAtIndex(List<String> list, int index, String value){
+        while (list.size() <= index) {
+            list.add("?");
+        }
+        list.set(index, value);
+    }
+
+    private List<List<String>> processThreeTables(List<XWPFTable> tables) {
+        List<List<String>> data= new ArrayList<>();
         XWPFTable t1 = tables.getFirst();
         XWPFTable t2 = tables.get(1);
         XWPFTable t3 = tables.getLast();
@@ -172,12 +231,14 @@ public class WordServiceImpl implements WordService {
                 data.add(innerArray);
             }
         }
+        return data;
     }
 
     @Override
     public NiceXWPFDocument generateWordDocument(List<List<String>> data) {
         NiceXWPFDocument document = null;
-        this.classPathResource = new ClassPathResource("template.docx");
+        this.classPathResource = new ClassPathResource("template_copy.docx");
+        log.info("data size: {}", data.getFirst().size());
         File temp_file = null;
         try {
             log.info("Trying to get input stream from template.docx");
@@ -187,6 +248,7 @@ public class WordServiceImpl implements WordService {
             try (FileOutputStream outputStream = new FileOutputStream(temp_file)) {
                 FileCopyUtils.copy(inputStream, outputStream);
             }
+            log.info(temp_file.toString());
             log.info("Ended trying to get input stream from template.docx");
 
             log.info("Trying to get input stream to NiceXWPFDocument");
@@ -196,13 +258,13 @@ public class WordServiceImpl implements WordService {
 
             for (int i = 0; i < data.size()-1; i++) {
                 List<String> arr = data.get(i);
+                log.info("Array's elements: {}", arr.toString());
 
                 Map<String, Object> dataMap = getStringObjectMap(arr);
 
                 log.info("The dataMap contains: {}", dataMap);
 
                 NiceXWPFDocument tempDoc = XWPFTemplate.compile(temp_file, Configure.createDefault()).render(dataMap).getXWPFDocument();
-
 
                 if (i < data.size()) {
                     XWPFParagraph paragraph = tempDoc.createParagraph();
@@ -227,7 +289,7 @@ public class WordServiceImpl implements WordService {
             log.warn("WordService: {}", e.getMessage());
         } finally {
             if (temp_file != null) {
-                log.info("Have deleted the temp_file? {}",temp_file.delete());
+                log.info("Have deleted the temp_file? {}", temp_file.delete());
             }
         }
         return null;
@@ -235,44 +297,58 @@ public class WordServiceImpl implements WordService {
 
     private Map<String, Object> getStringObjectMap(List<String> arr) {
         Map<String, Object> dataMap = new HashMap<>();
+
         Long studNumber = Long.valueOf(arr.get(2));
-        dataMap.put("ID", arr.getFirst());
-
-        dataMap.put("FullName", arr.get(1));
+        dataMap.put("ID", arr.get(0).isEmpty() ? "?" : arr.get(0));
+        dataMap.put("FullName", checkArrayBeforeInserting(arr, 1));
         dataMap.put("StudNum", studNumber);
+        dataMap.put("Theme", checkArrayBeforeInserting(arr, 3));
+        dataMap.put("SuData", checkArrayBeforeInserting(arr, 4)); // Scientific Supervisor
+        dataMap.put("SuName", checkArrayBeforeInserting(arr, 5));
+        dataMap.put("Questioner1", checkArrayBeforeInserting(arr, 11));
+        dataMap.put("Question1", checkArrayBeforeInserting(arr, 12));
+        dataMap.put("Questioner2", checkArrayBeforeInserting(arr, 13));
+        dataMap.put("Question2", checkArrayBeforeInserting(arr, 14));
+        dataMap.put("Questioner3", checkArrayBeforeInserting(arr, 15));
+        dataMap.put("Question3", checkArrayBeforeInserting(arr, 16));
+        dataMap.put("Score", checkArrayBeforeInserting(arr, 21));
+        dataMap.put("IndividualOpinion", checkArrayBeforeInserting(arr, 20));
+        dataMap.put("Language", checkArrayBeforeInserting(arr, 24));
 
-        dataMap.put("Theme", arr.get(3));
+        dataMap.putIfAbsent("Department", "?");
+        dataMap.putIfAbsent("Orientation", "?");
 
-        dataMap.put("SuData", arr.get(4)); // Scientific Supervisor
-        dataMap.put("SuName", arr.get(5));
-
-        dataMap.put("Questioner1", arr.get(11));
-        dataMap.put("Question1", arr.get(12));
-        dataMap.put("Questioner2", arr.get(13));
-        dataMap.put("Question2", arr.get(14));
-        dataMap.put("Questioner3", arr.get(15));
-        dataMap.put("Question3", arr.get(16));
-
-        dataMap.put("Score", arr.get(21));
-
-        dataMap.put("IndividualOpinion", arr.get(20));
-
-        dataMap.put("Language", arr.get(24));
-
+    /*
         String department = sqlService.getDepartmentNameByStudentNumber(studNumber);
         String orientationCodeWithName = sqlService.getOrientationCodeWithNameByStudentNumber(studNumber);
 
-        // Program, AnswerI I in {1-3}, Estimation
-        dataMap.put("Department",  department);
-        dataMap.put("Orientation", orientationCodeWithName);
-//        dataMap.put("Program", ); // пока самая непонятная
-//        dataMap.put("Answer1", );
-//        dataMap.put("Answer2", );
-//        dataMap.put("Answer3", );
-//        dataMap.put("Estimation", );
+        if (department != null) {
+            dataMap.put("Department", department);
+        }
+        if (orientationCodeWithName != null) {
+            dataMap.put("Orientation", orientationCodeWithName);
+        }
+    */
 
-        sqlService.saveDataFromProtocol(dataMap);
+
+    /*
+        dataMap.put("Answer1", checkArrayBeforeInserting(arr, <index_for_answer1>));
+        dataMap.put("Answer2", checkArrayBeforeInserting(arr, <index_for_answer2>));
+        dataMap.put("Answer3", checkArrayBeforeInserting(arr, <index_for_answer3>));
+        dataMap.put("Estimation", checkArrayBeforeInserting(arr, <index_for_estimation>));
+    */
+
         return dataMap;
+    }
+
+    private String checkArrayBeforeInserting(List<String> arr, int index) {
+
+        if (index < arr.size()) {
+            return arr.get(index).isEmpty() ? "?" : arr.get(index);
+        } else {
+            log.warn("Index {} is out of bounds for array: {}", index, arr);
+            return "?";
+        }
     }
 
 
